fixed some layout issues

--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ a {
     display: flex;
     justify-content: space-around;
     margin-bottom: 24px;
+    flex-wrap: wrap;
 }
 
 .mid-content-par-left {
@@ -141,6 +142,7 @@ a {
     width: 300px;
     height: 300px;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    flex-shrink: 0;
 }
 
 .mid-content-card {
@@ -219,6 +221,7 @@ a {
 .bottom-content-top-main {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .bottom-content-top-main-right {
@@ -261,6 +264,7 @@ a {
     width: 300px;
     height: 300px;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    flex-shrink: 0;
 }
 
 .bottom-content-mid {
@@ -280,6 +284,7 @@ a {
 
 .bottom-content-mid-cards {
     display: flex;
+    flex-wrap: wrap;
     gap: 64px;
 }
 
@@ -442,6 +447,7 @@ a {
     padding: 32px;
     height: 150px;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .bottom-content-title {
